Удалены несуществующие асимметричные протоколы, переписана секция про протокол Диффи-Хеллмана

--- a/protocols/asymmetric.tex
+++ b/protocols/asymmetric.tex
@@ -1,49 +1,7 @@
 \section{Асимметричные протоколы}
 \selectlanguage{russian}
 
-Асимметричные протоколы, или же протоколы, основанные на криптосистемах с открытыми ключами, позволяют ослабить требования к предварительному этапу протоколов. Вместо общего секретного ключа, который должны иметь две стороны (либо обе стороны и доверенный центр), в рассматриваемых ниже протоколах стороны должны предварительно обменяться открытыми ключами (между собой либо между собой и доверенным центром). Такой предварительный обмен может проходить по открытому каналу связи, в предположении, что криптоаналитик не может повлиять на содержимое канала связи на данном этапе.
-
-\subsection{Простой протокол}
-
-Рассмотрим протокол распространения ключей с помощью асимметричных шифров. Введём обозначения: $K_B$ -- открытый ключ стороны $B$, а $K_A$ -- открытый ключ стороны $A$. Протокол включает три сеанса обмена информацией.
-\begin{enumerate}
-    \item В первом сеансе сторона $A$ посылает стороне $B$ сообщение:
-            \[ A \rightarrow B: ~ E_{K_B}(K_1, A), \]
-        где $K_1$ -- ключ, выработанный стороной $A$.
-    \item Сторона $B$ получает $(K_1, A)$ и передаёт стороне $A$ наряду с другой информацией свой ключ $K_2$ в сообщении, зашифрованном с помощью открытого ключа $K_A$:
-            \[ A \leftarrow B: ~ E_{K_A}(K_2, K_1, B). \]
-    \item Сторона $A$ получает и расшифровывает сообщение $(K_2, K_1, B)$. Во время третьего сеанса сторона $A$, чтобы подтвердить, что она знает ключ $K_2$, посылает стороне $B$ сообщение:
-            \[ A \rightarrow B: ~ E_{K_B}(K_2). \]
-\end{enumerate}
-Общий ключ формируется из двух ключей: $K_1$ и $K_2$.
-
-\subsection{Протоколы с цифровыми подписями}
-
-Существуют протоколы обмена, в которых перед началом обмена ключами генерируются подписи сторон $A$ и $B$, соответственно $S_A(m)$ и $S_B(m)$. В этих протоколах можно использовать различные одноразовые метки. Рассмотрим пример.
-\begin{enumerate}
-    \item Сторона $A$ выбирает ключ $K$ и вырабатывает сообщение:
-            \[ \left( K, ~ t_A, ~ S_A(K, t_A, B) \right), \]
-        где $t_A$ -- метка времени. Зашифрованное сообщение передаёт стороне $B$:
-        \[ A \rightarrow B: ~ E_{K_B}(K, ~ t_A, ~ S_A(K, t_A, B)). \]
-    \item Сторона $B$ получает это сообщение, расшифровывает $\left( K, ~ t_A, ~ S_A(K, t_A, B) \right)$ и вырабатывает свою метку времени $t_B$. Проверка считается успешной, если $|t_B - t_A | < \delta $. Сторона $B$ знает свои реквизиты и может осуществлять проверку подписи.
-\end{enumerate}
-
-Имеется второй вариант протокола, в котором шифрование и подпись выполняются раздельно.
-\begin{enumerate}
-    \item Сторона $A$ вырабатывает ключ $K$, использует одноразовую метку (или метку времени) $t_{A}$ и передаёт стороне $B$ два различных зашифрованных сообщения:
-            \[ \begin{array}{ll}
-                A \rightarrow B: & ~ E_{K_B}(K, t_A), \\
-                A \rightarrow B: & ~ S_A(K, t_A, B). \\
-            \end{array} \]
-    \item Сторона $B$ получает это сообщение, расшифровывает $K, t_A$ и, добавив свои реквизиты, может проверить подпись $S_A(K, t_A, B)$.
-\end{enumerate}
-
-В третьем варианте протокола сначала производится шифрование, потом подпись.
-\begin{enumerate}
-    \item Сторона $A$ вырабатывает ключ $K$, использует одноразовую случайную метку или метку времени $t_A$ и передаёт стороне $B$ сообщение:
-        \[ A \rightarrow B: ~ t_A, ~ E_{K_B}(K, A), ~ S_A(t_A, ~ K, ~ E_{K_B}(K, A)). \]
-    \item Сторона $B$ получает это сообщение, расшифровывает $\left( K, ~ A \right)$ и проверяет подпись $S_A(t_A, ~ K, ~ E_{K_B}(K, A))$.
-\end{enumerate}
+Асимметричные протоколы, или же протоколы, основанные на криптосистемах с открытыми ключами, позволяют ослабить требования к предварительному этапу протоколов. Вместо общего секретного ключа, который должны иметь две стороны (либо каждая из сторон и доверенный центр), в рассматриваемых ниже протоколах стороны должны предварительно обменяться открытыми ключами (между собой либо с доверенным центром). Такой предварительный обмен может проходить по открытому каналу связи, в предположении, что криптоаналитик не может повлиять на содержимое канала связи на данном этапе.
 
 \input{diffie-hellman}
 
