--- a/protocols/diffie-hellman.tex
+++ b/protocols/diffie-hellman.tex
@@ -9,84 +9,32 @@
 
 Протокол обмена состоит из следующих действий.
 \begin{enumerate}
-    \item Сторона $A$ выбирает случайное число $x: ~ 2 \leq x \leq p-1$, вычисляет и передаёт стороне $B$ сообщение:
-        \[ A \rightarrow B: ~ g^x \mod p. \]
-    \item Сторона $B$ выбирает случайное число $y: ~ 2\leq y \leq p-1$, вычисляет и передаёт стороне $A$:
-        \[ A \leftarrow B: ~ g^y \mod p. \]
-    \item Сторона $A$, используя известные ей значения $x$, $g^{y} \mod p$, вычисляет ключ:
-        \[ K_{A} =(g^{y})^{x}\mod p=g^{xy} \mod p. \]
-    \item Сторона $B$, используя известные ей значения $y$, $g^{x} \mod p$, вычисляет ключ:
-        \[ K_{B} =(g^{x})^{y}\mod p=g^{xy}\mod p. \]
-        В результате получаем равенство $K_A = K_B = K$.
+    \item[(1)] Алиса выбирает случайное $2 \leq a \leq p - 1$
+    \item[{}] $Alice \to \left\{ A = g ^ x \bmod p \right\} \to Bob$
+    \item[(2)] Боб выбирает случайное $2 \leq b \leq p-1$
+    \item[{}] Боб вычисляет сеансовый ключ $K = A ^ b \bmod p$
+    \item[{}] $Bob \to \left\{ B = g ^ b \bmod p \right\} \to Alice$
+    \item[{}] Алиса вычисляет $K = B ^ a \bmod p$
 \end{enumerate}
 
-Таким способом создан общий секретный сеансовый ключ. В каждом новом сеансе используется этот же протокол для создания нового сеансового ключа.
+Таким способом создан общий секретный сеансовый ключ $K$. За счёт случайного выбора значений $a$ и $b$ в новом сеансе будет получен новой сеансовый ключ.
 
-Рассмотрим протокол Диффи~---~Хеллмана в ситуации, когда имеются три легальных пользователя $A,B,C$.
+Данный протокол обеспечивает только генерацию новых сеансовых ключей (цель G10). В отсутствие третей доверенной стороны он не обеспечивает ни аутентификацию сторон (цель G1), из-за отсутствия проходов с подтверждением владения ключом отсутствует аутентификация ключа (цель G8). Зато, так как протокол не использует длительные <<мастер>>-ключи, можно говорить о том, что он обладает свойством совершенной прямой секретности (цель G9).
 
-Каждая из сторон $A,B,C$ вырабатывает случайные числа $x,y,z$ соответственно и держит их в секрете.
+Данный протокол можно использовать только с такими каналами связи, в которые не может вмешаться активный криптоаналитик. В противном случае протокол становится уязвим к простой <<атаке посередине>>.
 
 \begin{enumerate}
-    \item Первый этап обмена информацией аналогичен вышеописанному обмену информацией между двумя сторонами:
-        \begin{enumerate}
-            \item $A \rightarrow B: ~ g^x \mod p$.
-            \item $B \rightarrow C: ~ g^y \mod p$.
-            \item $C \rightarrow A: ~ g^z \mod p$.
-        \end{enumerate}
-    \item Второй этап состоит из передач сообщений:
-        \begin{enumerate}
-            \item $A \rightarrow B: ~ (g^z)^x = g^{zx} \mod p$.
-            \item $B \rightarrow C: ~ (g^x)^y = g^{xy} \mod p$.
-            \item $C \rightarrow A: ~ (g^y)^z = g^{yz} \mod p$.
-        \end{enumerate}
-    \item На завершающем третьем этапе стороны вычисляют:
-        \begin{enumerate}
-            \item $A: ~ K_A = (g^{yz})^x = g^{xyz} \mod p$.
-            \item $B: ~ K_B = (g^{zx})^y = g^{xyz} \mod p$.
-            \item $C: ~ K_C = (g^{xy})^z = g^{xyz} \mod p$.
-        \end{enumerate}
+    \item[(1)] Алиса выбирает случайное $2 \leq a \leq p - 1$
+    \item[{}] $Alice \to \left\{ A = g ^ x \bmod p \right\} \to Mellory~(Bob)$
+    \item[(2)] Меллори выбирает случайное $2 \leq m \leq p-1$
+    \item[{}] Меллори вычисляет сеансовый ключ для канала с Алисой $K_{AM} = A ^ m \bmod p = g ^ {am} \bmod p$
+    \item[{}] $Mellory~(Bob) \to \left\{ M = g ^ m \bmod p \right\} \to Alice$
+    \item[{}] Алиса вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Боб) $K_{AM} = M ^ a \bmod p = g ^ { am } \bmod p$
+    \item[{}] $Mellory~(Alice) \to \left\{ M = g ^ m \bmod p \right\} \to Bob$
+    \item[(3)] Боб выбирает случайное $2 \leq b \leq p-1$
+    \item[{}] Боб вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Алиса) $K_{BM} = M ^ b \bmod p = g ^ { bm } \bmod p$
+    \item[{}] $Bob \to \left\{ B = g ^ b \bmod p \right\} \to Mellory~(Alice)$
+    \item[{}] Меллори вычисляет сеансовый ключ для канала с Бобом $K_{BM} = B ^ m \bmod p = g ^ { bm } \bmod p$
 \end{enumerate}
 
-Как видно из произведённых действий, выработанные сторонами $A, B, C$ ключи совпадают: $K_A = K_B = K_C = K$. Следовательно, создан общий секретный сеансовый ключ $K$ для трёх участников.
-
-Таким же образом можно построить протокол Диффи~---~Хеллмана для любого числа легальных пользователей.
-
-Рассмотрим этот двусторонний протокол с точки зрения криптоаналитика, желающего узнать ключ $K$. Предположим, ему удалось перехватить сообщения $g^{x}\mod p$ и $g^{y}\mod p $. Используя заранее известные данные $g,p $ и эти сообщения, криптоаналитик старается найти хотя бы одно из чисел $(x,y)$, то есть решить задачу дискретного логарифма. В настоящее время эта задача считается вычислительно трудной при обычно выбираемых значениях $p\sim 2^{1024}$.
-
-Существует атака активного криптоаналитика\index{криптоаналитик!активный}, названная <<человек посередине>> (man-in-the-middle)\index{атака!<<человек посередине>>}. Пусть имеются две легальные стороны $A$ и $B$ и нелегальная сторона $E$ -- активный криптоаналитик\index{криптоаналитик!активный}, который имеет возможность перехватывать и подменять сообщения как от $A$, так и от $B$:
-    \[ A \leftrightsquigarrow E \leftrightsquigarrow B. \]
-    %\[ A \leftrightarrow E \leftrightarrow B. \]
-
-\begin{enumerate}
-    \item Подмена ключей.
-        \begin{enumerate}
-            \item Сторона $A$ передаёт стороне $B$ сообщение:
-                \[ A \overset{E}{\nrightarrow} B: ~ g^x \mod p. \]
-            \item Сторона $E$ перехватывает сообщение $g^x \mod p$, сохраняет его и, зная $g$, передаёт стороне $B$ своё сообщение:
-                \[ E \rightarrow B: ~ g^z \mod p. \]
-            \item Сторона $B$ передаёт стороне $A$ сообщение:
-                \[ A \overset{E}{\nleftarrow} B: ~ g^y \mod p. \]
-            \item Сторона $E$ перехватывает сообщение $g^y \mod p$, сохраняет его и передаёт стороне $A$ своё сообщение:
-                \[ A \leftarrow E: ~ g^z \mod p \]
-                или какое-то другое.
-            \item Таким образом, между сторонами $A$ и $E$ образуется общий секретный ключ $K_{AE}$, между $B$ и $E$ -- ключ $K_{BE}$, причём $A$ и $B$ не знают, что у них ключи со стороной $E$, а не друг с другом:
-                \[ \begin{array} {l}
-                    K_{AE} = g^{xz} \mod p, \\
-                    K_{BE} = g^{yz} \mod p. \\
-                \end{array} \]
-
-        \end{enumerate}
-    \item Подмена сообщений.
-        \begin{enumerate}
-            \item Сторона $A$ посылает $B$ сообщение $m$, зашифрованное на ключе $K_{AE}$:
-                % \rightsquigarrow
-                \[ A \overset{E}{\nrightarrow} B: ~ E_{K_{AE}}(m). \]
-            \item Сторона $E$ перехватывает сообщение, расшифровывает с ключом $K_{AE}$, возможно, подменяет на $m'$, зашифровывает с ключом $K_{BE}$ и посылает $B$:
-                \[ E \rightarrow B: ~ E_{K_{BE}}(m'). \]
-            \item То же самое происходит при обратной передаче от $B$ к $A$.
-        \end{enumerate}
-\end{enumerate}
-
-Криптоаналитик $E$ имеет возможность перехватывать и подменять все передаваемые сообщения. Если по тексту письма нельзя обнаружить участие криптоаналитика в обмене информацией, то атака <<человек посередине>>\index{атака!<<человек посередине>>} успешна.
-
-Существует несколько протоколов для защиты от атаки этого типа.
+В результате Алиса и Боб получили новые сеансовые ключи, но <<защищённый>> канал связи установили не с друг с другом, а со злоумышленником, который теперь имеет возможность ретранслировать или изменять все передаваемые сообщения между Алисой и Бобом.
