Добавлена информация о протоколе Диффи-Хеллмана в группе точек эллиптической кривой

--- a/protocols/diffie-hellman.tex
+++ b/protocols/diffie-hellman.tex
@@ -38,3 +38,19 @@
 \end{enumerate}
 
 В результате Алиса и Боб получили новые сеансовые ключи, но <<защищённый>> канал связи установили не с друг с другом, а со злоумышленником, который теперь имеет возможность ретранслировать или изменять все передаваемые сообщения между Алисой и Бобом.
+
+Протокол Диффи~---~Хеллмана отличается от большей части протоколов распространения ключей из-за того, что не использует другие криптографические примитивы (функции шифрования, электронно-цифровой подписи или хеширования), но сам по себе является в некотором смысле криптографическим примитивом для построения более сложных протоколов. Он обеспечивает генерацию случайного числа в распределённой системе без доверенного центра. Причём ни одна из сторон не может заставить другую сторону использовать старый сессионный ключ, в отличие от, например, протокола Yahalom\index{протокол!Yahalom} из раздела~\ref{section-protocols-yahalom}.
+
+Протокол можно изменить таким образом, чтобы вместо мультипликативной группы простого умножения использовать аддитивную группу сложения точек эллиптической кривой (см. раздел~\ref{section-math-ec-groups}). В этом случае стороны по прежнему будут выбирать некоторые случайные целые числа, но не возводить генератор-число в степень, а умножать генератор-точку на загаданное число.
+
+\begin{enumerate}
+    \item[(0)] Стороны договорились о группе точек эллиптической кривой $\group{E}$, её циклической подгруппе $\group{G}$ мощности $n = \| \group{G} \|$ и генераторе $G$ группы $\group{G}$ (или хотя бы достаточно большой подгруппы группы $\group{G}$).
+    \item[(1)] Алиса выбирает случайное $2 \leq a \leq n - 1$
+    \item[{}] $Alice \to \left\{ A = a \times G \right\} \to Bob$
+    \item[(2)] Боб выбирает случайное $2 \leq b \leq n - 1$
+    \item[{}] Боб вычисляет точку $K = b \times A$
+    \item[{}] $Bob \to \left\{ B = g \times G \right\} \to Alice$
+    \item[{}] Алиса вычисляет точку $K = a \times B$
+\end{enumerate}
+
+В качестве нового сессионного ключа стороны могут выбрать, например, первую координату найденной точки $K$.
