--- a/protocols/needham-schroeder.tex
+++ b/protocols/needham-schroeder.tex
@@ -3,34 +3,33 @@
 
 Протокол Нидхема~---~Шрёдера (\langen{Roger Needham, Michael Shroeder}, 1979,~\cite{Needham:Schroeder:1978}) похож на модифицированный протокол Wide-Mouth Frog, но отличается тем, что доверенный центр (Трент) во время работы основной части протокола не общается со вторым абонентом. Первый абонент получает от доверенного центра специальный пакет, который он без всякой модификации отправляет второму абоненту.
 
-\begin{figure}[!htb]
+\begin{figure}
     \centering
     \includegraphics[width=0.5\textwidth]{pic/key_distribution-needham-schroeder}
     \caption{Схема взаимодействия абонентов и доверенного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
 \end{figure}
 
-\begin{enumerate}
-	\item $ Alice	\rightarrow \{ A, B, R_A \}						\rightarrow Trent $
-	\item $ Trent	\rightarrow \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\rightarrow Alice $
-	\item $ Alice	\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
-	\item $ Bob	\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Alice $
-	\item $ Alice	\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
-\end{enumerate}
+\begin{samepage}\begin{itemize}
+	\item[(1)] $ Alice	\rightarrow \{ A, B, R_A \}						\rightarrow Trent $
+	\item[(2)] $ Trent	\rightarrow \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\rightarrow Alice $
+	\item[(3)] $ Alice	\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
+	\item[(4)] $ Bob	\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Alice $
+	\item[(5)] $ Alice	\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
+\end{itemize}\end{samepage}
 
 Протокол обеспечивает и двустороннюю аутентификацию сторон, и, казалось бы, защиту от атак с повторной передачей (\langen{replay attack}). Последнее делается с помощью введения уже известных по модифицированному протоколу Wide-Mouth Frog случайных меток $R_A$ и $R_B$. Действительно, без знания ключа злоумышленник не сможет выдать себя за Алису перед Бобом (так как не сможет расшифровать пакет с зашифрованной меткой $R_B$). Однако, как мы договорились ранее во введении к этой главе, сам сессионный ключ не может считаться надёжным длительное время. Если злоумышленник сумеет в какой-то момент времени получить ранее использованный сессионный ключ $K$, он сможет убедить Боба, что он является Алисой, и что это новый сессионный ключ. Для этого ему понадобится переданный ранее по открытому каналу пакет из пункта 3 протокола.
 
-\begin{enumerate}
-	\item $ Eva		\rightarrow \{ A, B, R_A \}						\rightarrow Trent $
-	\item $ Trent		\rightarrow \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\rightarrow Alice $
-	\item $ Alice		\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
-	\item $ Bob		\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Alice $
-	\item $ Alice		\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
-
-		$\dots$ по прошествии некоторого времени $\dots$\\
-	\item $ Eva~(Alice)	\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
-	\item $ Bob		\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Eva~(Alice) $
-	\item $ Eva (Alice)	\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
-\end{enumerate}
+\begin{itemize}
+	\item[(1)] $ Eva \to \{ A, B, R_A \} \to Trent $
+	\item[(2)] $ Trent \to \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\to Alice $
+	\item[(3)] $ Alice \to \{ E_B \left( K, A \right) \} \to Bob $
+	\item[(4)] $ Bob \to \{ E_K \left( R_B \right) \} \to Alice $
+	\item[(5)] $ Alice \to \{ E_K \left( R_B - 1 \right) \} \to Bob $
+	\item[{}]  $\dots$ по прошествии некоторого времени $\dots$
+	\item[(6)] $ Eva~(Alice) \to \{ E_B \left( K, A \right) \} \to Bob $
+	\item[(7)] $ Bob \to \{ E_K \left( R_B \right) \} \to Eva~(Alice) $
+	\item[(8)] $ Eva (Alice) \to \{ E_K \left( R_B - 1 \right) \} \to Bob $
+\end{itemize}
 
 Относительно мелкий недостаток протокола состоит ещё и в том, что во втором пакете доверенный центр в зашифрованном виде передаёт то, что в третьем шаге пересылается по открытому каналу ($E_B \left( K, A \right)$).
 
