Улучшение и унификация форматирования раздела с симметричными протоколами

--- a/protocols/diffie-hellman.tex
+++ b/protocols/diffie-hellman.tex
@@ -14,7 +14,7 @@
     \item[(2)] Боб выбирает случайное $2 \leq b \leq p-1$
     \item[{}] Боб вычисляет сеансовый ключ $K = A ^ b \bmod p$
     \item[{}] $Bob \to \left\{ B = g ^ b \bmod p \right\} \to Alice$
-    \item[{}] Алиса вычисляет $K = B ^ a \bmod p$
+    \item[(3)] Алиса вычисляет $K = B ^ a \bmod p$
 \end{enumerate}
 
 Таким способом создан общий секретный сеансовый ключ $K$. За счёт случайного выбора значений $a$ и $b$ в новом сеансе будет получен новой сеансовый ключ.
@@ -25,16 +25,20 @@
 
 \begin{enumerate}
     \item[(1)] Алиса выбирает случайное $2 \leq a \leq p - 1$
-    \item[{}] $Alice \to \left\{ A = g ^ x \bmod p \right\} \to Mellory~(Bob)$
+    \item[{}] $Alice \to \left\{ A = g ^ a \bmod p \right\} \to Mellory~(Bob)$
     \item[(2)] Меллори выбирает случайное $2 \leq m \leq p-1$
-    \item[{}] Меллори вычисляет сеансовый ключ для канала с Алисой $K_{AM} = A ^ m \bmod p = g ^ {am} \bmod p$
+    \item[{}] Меллори вычисляет сеансовый ключ для канала с Алисой
+        \[K_{AM} = A ^ m \bmod p = g ^ {am} \bmod p\]
     \item[{}] $Mellory~(Bob) \to \left\{ M = g ^ m \bmod p \right\} \to Alice$
-    \item[{}] Алиса вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Боб) $K_{AM} = M ^ a \bmod p = g ^ { am } \bmod p$
     \item[{}] $Mellory~(Alice) \to \left\{ M = g ^ m \bmod p \right\} \to Bob$
-    \item[(3)] Боб выбирает случайное $2 \leq b \leq p-1$
-    \item[{}] Боб вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Алиса) $K_{BM} = M ^ b \bmod p = g ^ { bm } \bmod p$
+    \item[(3)] Алиса вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Боб)
+        \[K_{AM} = M ^ a \bmod p = g ^ { am } \bmod p\]
+    \item[(4)] Боб выбирает случайное $2 \leq b \leq p-1$
+    \item[{}] Боб вычисляет сеансовый ключ для канала с Меллори (думая, что Меллори это Алиса)
+        \[K_{BM} = M ^ b \bmod p = g ^ { bm } \bmod p\]
     \item[{}] $Bob \to \left\{ B = g ^ b \bmod p \right\} \to Mellory~(Alice)$
-    \item[{}] Меллори вычисляет сеансовый ключ для канала с Бобом $K_{BM} = B ^ m \bmod p = g ^ { bm } \bmod p$
+    \item[(5)] Меллори вычисляет сеансовый ключ для канала с Бобом
+        \[K_{BM} = B ^ m \bmod p = g ^ { bm } \bmod p\]
 \end{enumerate}
 
 В результате Алиса и Боб получили новые сеансовые ключи, но <<защищённый>> канал связи установили не с друг с другом, а со злоумышленником, который теперь имеет возможность ретранслировать или изменять все передаваемые сообщения между Алисой и Бобом.
@@ -50,7 +54,7 @@
     \item[(2)] Боб выбирает случайное $2 \leq b \leq n - 1$
     \item[{}] Боб вычисляет точку $K = b \times A$
     \item[{}] $Bob \to \left\{ B = g \times G \right\} \to Alice$
-    \item[{}] Алиса вычисляет точку $K = a \times B$
+    \item[(3)] Алиса вычисляет точку $K = a \times B$
 \end{enumerate}
 
 В качестве нового сессионного ключа стороны могут выбрать, например, первую координату найденной точки $K$.
