--- a/protocols/el-gamal.tex
+++ b/protocols/el-gamal.tex
@@ -10,7 +10,7 @@
     \item Сторона $A$ вырабатывает свой секрет $x$, сеансовый ключ
             \[ K_A = (\PK_B)^x = g^{bx} \mod p \]
         и отправляет $B$:
-            \[ A \rightarrow B: ~ g^x \mod p. \]
+            \[ A \to B: ~ g^x \mod p. \]
     \item Сторона $B$, получив от $A$ число $g^x \mod p$, использует его и свой секрет $\SK_B = b$, чтобы создать свой ключ
             \[ K_B = (g^x)^{\SK_B} = g^{bx} \mod p, \]
         то есть сеансовые ключи обеих сторон совпадают:
