--- a/protocols/girault_scheme.tex
+++ b/protocols/girault_scheme.tex
@@ -17,8 +17,8 @@
         \end{array} \]
      и отправляют центру сообщения:
         \[ \begin{array}{ll}
-            A \rightarrow T: & ~ I_A, ~~ g^{-\SK_A} = g^{-a} \mod n, \\
-            B \rightarrow T: & ~ I_B, ~~ g^{-\SK_B} = g^{-b} \mod n, \\
+            A \to T: & ~ I_A, ~~ g^{-\SK_A} = g^{-a} \mod n, \\
+            B \to T: & ~ I_B, ~~ g^{-\SK_B} = g^{-b} \mod n, \\
         \end{array} \]
         где $I_A, I_B$ -- числовые идентификаторы сторон.
     \item Центр $T$ вычисляет открытые ключи для $A$ и $B$ и также по надёжному каналу передаёт им:
