--- a/protocols/mti.tex
+++ b/protocols/mti.tex
@@ -14,7 +14,7 @@
 \textbf{Протокол MTI}:
 \begin{enumerate}
     \item Сторона $A$ генерирует случайное число $x, ~ 2\leq x\leq p-1$, создаёт и отправляет $B$ сообщение:
-        \[ A \rightarrow B: ~ g^x \mod p. \]
+        \[ A \to B: ~ g^x \mod p. \]
     \item Сторона $B$ генерирует случайное число $y, ~ 2\leq y\leq p-1$, создаёт и отправляет $A$ сообщение:
         \[ A \leftarrow B: ~ g^y \mod p. \]
     \item Сторона $A$, используя открытые данные и полученное сообщение, создаёт сеансовый ключ:
