--- a/protocols/sts.tex
+++ b/protocols/sts.tex
@@ -15,7 +15,7 @@
 Протокол состоит из трёх раундов обмена информацией между сторонами $A$ и $B$.
 \begin{enumerate}
     \item Сторона $A$ создаёт секретное случайное число $x: 2 \leq x \leq p-1$ и отправляет $B$:
-            \[ A \rightarrow B: ~ g^x \mod p. \]
+            \[ A \to B: ~ g^x \mod p. \]
     \item Сторона $B$ создаёт секретное случайное число $y: 2 \leq y \leq p-1$, вычисляет общий секретный ключ
             \[ K = (g^x)^y = g^{xy} \mod p, \]
         с помощью которого создаёт шифрованное сообщение $E_K(S_B(g^x, g^y))$ для аутентификации, и отправляет $A$:
@@ -25,7 +25,7 @@
         и расшифровывает сообщение:
             \[ D_K( E_K( S_B( g^x, g^y))) = S_B( g^x, g^y). \]
             Затем аутентифицирует сторону $B$, проверяя подпись $S_B$ открытым ключом $\PK_B$. Вычисляет и пересылает стороне $B$ сообщение:
-            \[ A \rightarrow B: ~ E_K( S_A( g^x, g^y)). \]
+            \[ A \to B: ~ E_K( S_A( g^x, g^y)). \]
     \item Сторона $B$ расшифровывает принятое сообщение:
             \[ D_K( E_K( S_A( g^x, g^y))) = S_A( g^x, g^y) \]
         и осуществляет аутентификацию, выполняя проверку подписи $S_A$ с помощью открытого ключа $\PK_A$.
