--- a/protocols/yahalom.tex
+++ b/protocols/yahalom.tex
@@ -34,4 +34,6 @@
 	\item[{}] $Alice \to \{ E_B( A, K^* ), E_{K^*}( R_B ) \} \to Bob$
 \end{itemize}\end{samepage}
 
+Протокол Yahalom послужил основной большому количеству научных работ, связанных с автоматизированным анализом стойкости криптографических протоколов и имел несколько <<улучшенных>> вариантов. Однако о широком использовании данного протокола в реальных информационных системах неизвестно.
+
 \index{протокол!Yahalom|)}
