--- a/protocols/three-pass.tex
+++ b/protocols/three-pass.tex
@@ -18,13 +18,13 @@
 Протокол состоит из трёх шагов (отсюда и название).
 \begin{enumerate}
     \item Алиса создаёт новый секретный сеансовый ключ $K_S$, шифрует его с помощью своего ключа $K_A$ и посылает сообщение Бобу:
-        \[ Alice \rightarrow ~ E_A \left( K_S \right) ~ \rightarrow Bob. \]
+        \[ Alice \to ~ E_A \left( K_S \right) ~ \to Bob. \]
     \item Боб получает это сообщение, шифрует его с помощью своего ключа $K_B$ и посылает сообщение Алисе:
-        \[ Bob \rightarrow ~ E_B \left( E_A \left( K_S \right) \right) ~ \rightarrow Alice. \]
+        \[ Bob \to ~ E_B \left( E_A \left( K_S \right) \right) ~ \to Alice. \]
     Алиса, получив сообщение $E_B \left( E_A \left( K_S \right) \right)$, использует свой закрытый ключ $k_A$ для расшифрования:
 	\[ D_A \left( E_B \left( E_A \left( K_S \right) \right) \right) = D_A \left( E_A \left( E_B \left( K_S \right) \right) \right) = E_B \left( K_S \right). \]
     \item Алиса передаёт Бобу сообщение, в котором новый секретный сеансовый ключ зашифрован уже только ключом Боба:
-        \[ Alice \rightarrow ~ E_B \left( K_S \right) ~ \rightarrow Bob. \]
+        \[ Alice \to ~ E_B \left( K_S \right) ~ \to Bob. \]
     Боб, получив сообщение $E_B \left( K_S \right)$, использует свой ключ $k_B$ для расшифрования:
 	\[ D_B \left( E_B \left( K_S \right) \right) = K_S. \]
 \end{enumerate}
@@ -44,16 +44,16 @@
     \item Алиса генерирует новый сеансовый ключ, шифрует его своим секретным ключом $K_A$ и посылает Бобу:
             \[\begin{array}{l}
 		E_A(K) = K \oplus K_A, \\
-		Alice \rightarrow ~ E_A(K) ~ \rightarrow Bob.
+		Alice \to ~ E_A(K) ~ \to Bob.
 	    \end{array}\]
     \item Боб шифрует полученное сообщение уже своим ключом и отправляет Алисе:
             \[\begin{array}{l}
 		E_B(E_A(K)) = K \oplus K_A \oplus K_B, \\
-		Bob \rightarrow ~ E_B(E_A(K)) ~ \rightarrow Alice.
+		Bob \to ~ E_B(E_A(K)) ~ \to Alice.
 	    \end{array}\]
     \item Используя коммутативность операции шифрования, Алиса <<снимает>> шифрование своим ключом и отправляет результат Бобу:
             \[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = K \oplus K_A \oplus K_B \oplus K_A = K \oplus K_B = E_B \left( K \right). \]
-            \[ Alice \rightarrow ~ E_B \left( K \right) ~ \rightarrow Bob. \]
+            \[ Alice \to ~ E_B \left( K \right) ~ \to Bob. \]
     Боб, получив сообщение $K \oplus K_B$, выполняет расшифрование:
             \[ D_B( E_B( K ) ) = K \oplus K_B \oplus K_B = K. \]
     В результате Алиса и Боб знают общий сеансовый ключ $K$.
@@ -85,16 +85,16 @@ a \times a' = 1 \mod (p-1), \\
     \item Алиса создаёт новый сеансовый ключ $K < p$, шифрует его своим секретным ключом $a$ и посылает сообщение Бобу:
             \[\begin{array}{l}
 		E_A(K) = K ^ a \mod p, \\
-		Alice \rightarrow ~ E_A(K) ~ \rightarrow Bob.
+		Alice \to ~ E_A(K) ~ \to Bob.
 	    \end{array}\]
     \item Боб шифрует полученное сообщение уже своим ключом и отправляет Алисе:
             \[\begin{array}{l}
 		E_B(E_A(K)) = K^{ab} \mod p, \\
-		Bob \rightarrow ~ E_B(E_A(K)) ~ \rightarrow Alice.
+		Bob \to ~ E_B(E_A(K)) ~ \to Alice.
 	    \end{array}\]
     \item Используя коммутативность операции шифрования, Алиса <<снимает>> шифрование своим ключом и отправляет результат Бобу:
             \[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = \left( K^{ab} \right) ^{a'} = K^{aa'b} = K^{b} = E_B \left( K \right) \mod p. \]
-            \[ Alice \rightarrow ~ E_B \left( K \right) ~ \rightarrow Bob. \]
+            \[ Alice \to ~ E_B \left( K \right) ~ \to Bob. \]
     Боб, получив сообщение $K \oplus K_B$, выполняет расшифрование:
             \[ D_B( E_B( K ) ) = K \oplus K_B \oplus K_B = K. \]
     В результате Алиса и Боб знают общий сеансовый ключ $K$.
